// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskRepo Create task 1`] = `"INSERT @value0 IN @@value1 RETURN NEW"`;

exports[`TaskRepo Create task 2`] = `
{
  "@value1": "core_tasks",
  "value0": {
    "_key": "_key",
    "archive": false,
    "created_at": 1,
    "created_by": "0",
    "func": {
      "args": [],
      "moduleName": "moduleName",
      "name": "func",
      "subModuleName": "subModuleName",
    },
    "id": "id",
    "label": {
      "en": "name",
      "fr": "name",
    },
    "modified_at": 1,
    "priority": 1,
    "startAt": 123,
    "status": "PENDING",
  },
}
`;

exports[`TaskRepo Delete task 1`] = `"REMOVE @value0 IN @@value1 RETURN OLD"`;

exports[`TaskRepo Delete task 2`] = `
{
  "@value1": "core_tasks",
  "value0": {
    "_key": "id",
  },
}
`;

exports[`TaskRepo Retrieve tasks to execute 1`] = `
"FOR task IN @@value0
                    FILTER task.status == @value1
                    FILTER task.startAt <= @value2
                    FILTER task.workerId == null
                    SORT task.priority DESC, task.startAt ASC
                RETURN task"
`;

exports[`TaskRepo Retrieve tasks to execute 2`] = `
{
  "@value0": "core_tasks",
  "value1": "CREATED",
  "value2": 1,
}
`;

exports[`TaskRepo Update task 1`] = `"UPDATE @value0 IN @@value1 RETURN NEW"`;

exports[`TaskRepo Update task 2`] = `
{
  "@value1": "core_tasks",
  "value0": {
    "_key": "_key",
    "archive": false,
    "created_at": null,
    "created_by": null,
    "func": {
      "args": [],
      "moduleName": "moduleName",
      "name": "func",
      "subModuleName": "subModuleName",
    },
    "id": "id",
    "label": {
      "en": "name",
      "fr": "name",
    },
    "modified_at": 1,
    "priority": 1,
    "startAt": 123,
    "status": "PENDING",
  },
}
`;
